have hidden word populating

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <p id="wins">wins</p>
         <p id="losses">losses</p>
     </div>
-    <p id="word-div">_ _ _ _ _ _</p>
+    <p id="word-div"></p>
     <input id="letter-input">
     <button id="submit-letter">Guess</button>
     </div>
