--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>Hangman Game</h1>
     <button id="start-button">Start</button>
     <div id="tries-wins-losses">
-        <p id="tries">tries</p>
+        <p id="tries">Tries:</p>
         <p id="wins">wins</p>
         <p id="losses">losses</p>
     </div>
