base game pretty much complete with num of tries and a loose state

--- a/index.html
+++ b/index.html
@@ -14,11 +14,9 @@
     <button id="start-button">Start</button>
     <div id="tries-wins-losses">
         <p id="tries">Tries:</p>
-        <p id="wins">wins</p>
-        <p id="losses">losses</p>
     </div>
     <p id="word-div"></p>
-    <input id="letter-input">
+    <input maxlength="1" id="letter-input">
     <button id="submit-letter">Guess</button>
     </div>
 </body>
