clear input on submit

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div id="tries-wins-losses">
         <p id="tries">Tries:</p>
     </div>
+    <p id="letter-tried">Letters Tried: s</p>
     <p id="word-div"></p>
     <input maxlength="1" id="letter-input">
     <button id="submit-letter">Guess</button>
