--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <div class="main-div">
     <h1>Hangman Game</h1>
     <button id="start-button">Start</button>
+    <p>Letters Tried: <p id="letter-tried"></p></p>
     <div id="tries-wins-losses">
         <p id="tries">Tries:</p>
     </div>
-    <p id="letter-tried">Letters Tried: s</p>
     <p id="word-div"></p>
     <input maxlength="1" id="letter-input">
     <button id="submit-letter">Guess</button>
