added a win state

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <button id="start-button">Start</button>
     <p>Letters Tried: <p id="letter-tried"></p></p>
     <div id="tries-wins-losses">
-        <p id="tries">Tries:</p>
+        <p id="tries">Tries Left:</p>
     </div>
     <p id="word-div"></p>
     <input maxlength="1" id="letter-input">
