hide game before game start

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div class="main-div">
     <h1>Hangman Game</h1>
     <button id="start-button">Start</button>
+    <div id="game-div" style="display: none;">
     <p>Letters Tried: <p id="letter-tried"></p></p>
     <div id="tries-wins-losses">
         <p id="tries">Tries Left:</p>
@@ -19,6 +20,7 @@
     <p id="word-div"></p>
     <input maxlength="1" id="letter-input">
     <button id="submit-letter">Guess</button>
+    </div>
     </div>
 </body>
 <script src="main.js"></script>
