--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     <h1>Hangman Game</h1>
     <button id="start-button">Start</button>
     <div id="game-div">
-    <p>Letters Tried: <p id="letters-tried"></p></p>
     <div id="wins-losses">
         <p id="wins">Wins:</p>
-        <p id="word-div"></p>
+        <p id="tries-left">Tries Left:</p>
         <p id="losses">Losses:</p>
     </div>
+    <p id="word-div"></p>
     <input maxlength="1" id="input-field">
     <button id="guess-button">Guess</button>
-    <p id="tries-left">Tries Left:</p>
+    <p>Letters Tried: <br><span id="letters-tried"></span></p>
     </div>
     </div>
 </body>
