--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <button id="start-button">Start</button>
     <div id="game-div">
     <div id="wins-losses">
-        <p id="wins">Wins:</p>
+        <p id="wins">Wins: 0</p>
         <p id="tries-left">Tries Left:</p>
-        <p id="losses">Losses:</p>
+        <p id="losses">Losses: 0</p>
     </div>
-    <img id="image" src="/hangman_images/hang_1.png">
+    <img id="image" src="/hangman_images/hang_0.png">
     <p id="word-div"></p>
     <input maxlength="1" id="input-field">
     <button id="guess-button">Guess</button>
