--- a/index.html
+++ b/index.html
@@ -13,16 +13,17 @@
     <h1>Hangman Game</h1>
     <button id="start-button">Start</button>
     <div id="game-div">
+    <button id="reset-wins-losses-tries">Reset Wins/Losses/Tries</button>
     <div id="wins-losses">
-        <p id="wins">Wins: 0</p>
-        <p id="tries-left">Tries Left:</p>
-        <p id="losses">Losses: 0</p>
+        <p>Wins: <span id="wins"></span></p>
+        <p>Tries Left: <span id="tries-left"></span></p>
+        <p>Losses: <span id="losses"></span></p>
     </div>
     <img id="image" src="/hangman_images/hang_0.png">
     <p id="word-div"></p>
-    <input maxlength="1" id="input-field">
-    <button id="guess-button">Guess</button>
-    <p>Letters Tried: <br><span id="letters-tried"></span></p>
+       <p><span id="letters-tried"></span><br><span STYLE="text-decoration:overline">Letters Tried</span></p>
+        <input maxlength="1" id="input-field">
+        <button id="guess-button">Guess</button>
     </div>
     </div>
 </body>
