turned off auto complete

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <img id="image" src="/hangman_images/hang_0.png">
     <p id="word-div"></p>
        <p><span id="letters-tried"></span><br><span STYLE="text-decoration:overline">Letters Tried</span></p>
-        <input maxlength="1" id="input-field">
+        <input maxlength="1" id="input-field" autocomplete="off">
         <button id="guess-button">Guess</button>
     </div>
     </div>
