--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <p>Tries Left: <span id="tries-left"></span></p>
         <p>Losses: <span id="losses"></span></p>
     </div>
-    <img id="image" src="/hangman_images/hang_0.png">
+    <img id="image" src="/hangman_images/hang0.png">
     <p id="word-div"></p>
        <p><span id="letters-tried"></span><br><span STYLE="text-decoration:overline">Letters Tried</span></p>
         <input maxlength="1" id="input-field" autocomplete="off">
