--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>Hangman Game</h1>
     <button id="start-button">Start</button>
     <div id="game-div">
-    <button id="reset-wins-losses-tries">Reset Wins/Losses/Tries</button>
+    <button id="reset-wins-losses">Reset Wins/Losses</button>
     <div id="wins-losses">
         <p>Wins: <span id="wins"></span></p>
         <p>Tries Left: <span id="tries-left"></span></p>
@@ -21,9 +21,10 @@
     </div>
     <img id="image" src="/hangman_images/hang0.png">
     <p id="word-div"></p>
-       <p><span id="letters-tried"></span><br><span STYLE="text-decoration:overline">Letters Tried</span></p>
+       <p id="letters-tried-div"><span id="letters-tried"></span><br><span STYLE="text-decoration:overline">Letters Tried</span></p>
         <input maxlength="1" id="input-field" autocomplete="off">
         <button id="guess-button">Guess</button>
+        <button id="new-word-button" >New Word</button>
     </div>
     </div>
 </body>
